<resources>
    <string name="app_name">Pruebas-Nivel</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="filtro">Filtrar</string>

    <string name="id">ID:</string>
    <string name="title">Título:</string>
    <string name="gener">Género:</string>
    <string name="isbn">ISBN:</string>
    <string name="description">Descripción:</string>

    <string name="fantasy">Fantasía</string>
    <string name="crime">Crimen</string>
    <string name="romance">Romance</string>

    <string name="maintenance_title">APP en mantenimiento</string>
    <string name="maintenance_message">Estamos mejorando la APP. Disculpe las molestias.</string>

    <string-array name="genre">
        <item> Selecciona opción </item>
        <item>@string/fantasy</item>
        <item>@string/crime</item>
        <item>@string/romance</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maintenance">Maintenance</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>