<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F1F0F0">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:background="#FAFAFA"
        android:padding="6dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:layout_weight="0.5"
                android:padding="2dp"
                android:text="@string/id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:layout_weight="0.5"
                android:padding="2dp"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:layout_weight="0.5"
                android:padding="2dp"
                android:text="@string/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:layout_weight="0.5"
                android:padding="2dp"
                android:text="TextView" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:layout_weight="0.5"
                android:padding="2dp"
                android:text="@string/gener"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:layout_weight="0.5"
                android:padding="2dp"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:layout_weight="0.5"
                android:padding="2dp"
                android:text="@string/isbn"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/isbnTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:layout_weight="0.5"
                android:padding="2dp"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/description"
                android:textStyle="bold"
                android:layout_weight="0.5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="0.5"
                android:paddingRight="10dp"
                android:text="TextView" />
        </TableRow>
    </TableLayout>
</LinearLayout>